# STDU

MachineLearning/: NewsClassifyBayes.ipynb
Slam/ch2/: CMakeLists.txt  libHelloSLAM.cpp  libHelloSLAM.h  main.cpp
Slam/ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
Slam/ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
Slam/ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
Slam/ch3/visualizeGeometry/: CMakeLists.txt
Slam/ch4/: CMakeLists.txt  trajectoryError.cpp  useSophus.cpp
code/: data.xlsx  tfidf.py  tfidf_text.py
code/.ipynb_checkpoints/: testmatplot-checkpoint.ipynb
